hphp/test/zend/bad/Zend/tests/magic_methods_005.php
<?php

interface a {
	static function __call($a, $b);
}

?>